--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.stqa.selenium</groupId>
-    <artifactId>firstHomeWork</artifactId>
+    <groupId>org.example</groupId>
+    <artifactId>HomeWorkPO</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -22,8 +22,14 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
+            <version>4.12</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.tngtech.java</groupId>
+            <artifactId>junit-dataprovider</artifactId>
+            <version>1.13.1</version>
         </dependency>
 
         <dependency>
@@ -34,7 +40,6 @@
         </dependency>
     </dependencies>
 
-
     <build>
         <testResources>
             <testResource>
@@ -44,6 +49,16 @@
         </testResources>
 
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${enforcer.version}</version>
+                <configuration>
+                    <parallel>classes</parallel>
+                    <threadCount>10</threadCount>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
@@ -78,6 +93,27 @@
             <id>langu</id>
             <properties>
                 <langu>en</langu>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>chrome</id>
+            <properties>
+                <browser>chrome</browser>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>firefox</id>
+            <properties>
+                <browser>firefox</browser>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>ie</id>
+            <properties>
+                <browser>ie</browser>
             </properties>
         </profile>
     </profiles>
