--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.stqa.selenium</groupId>
-    <artifactId>firstHomeWork</artifactId>
+    <artifactId>HomeWorkPO</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -16,14 +16,21 @@
         <junit.version>4.13.2</junit.version>
         <selenium.version>3.141.59</selenium.version>
         <enforcer.version>3.0.0-M3</enforcer.version>
+        <cucumber.version>6.10.4</cucumber.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
+            <version>4.12</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.tngtech.java</groupId>
+            <artifactId>junit-dataprovider</artifactId>
+            <version>1.13.1</version>
         </dependency>
 
         <dependency>
@@ -32,8 +39,19 @@
             <version>${selenium.version}</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
 
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java8</artifactId>
+            <version>${cucumber.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>${cucumber.version}</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <testResources>
@@ -44,6 +62,16 @@
         </testResources>
 
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${enforcer.version}</version>
+                <configuration>
+                    <parallel>classes</parallel>
+                    <threadCount>10</threadCount>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
@@ -78,6 +106,27 @@
             <id>langu</id>
             <properties>
                 <langu>en</langu>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>chrome</id>
+            <properties>
+                <browser>chrome</browser>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>firefox</id>
+            <properties>
+                <browser>firefox</browser>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>ie</id>
+            <properties>
+                <browser>ie</browser>
             </properties>
         </profile>
     </profiles>
