--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.stqa.selenium</groupId>
-    <artifactId>HomeWorkPO</artifactId>
+    <artifactId>firstHomeWork</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>firstHomeWork</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,21 +18,14 @@
         <junit.version>4.13.2</junit.version>
         <selenium.version>3.141.59</selenium.version>
         <enforcer.version>3.0.0-M3</enforcer.version>
-        <cucumber.version>6.10.4</cucumber.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.tngtech.java</groupId>
-            <artifactId>junit-dataprovider</artifactId>
-            <version>1.12.0</version>
+            <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -41,15 +36,10 @@
         </dependency>
 
         <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-java8</artifactId>
-            <version>${cucumber.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-junit</artifactId>
-            <version>${cucumber.version}</version>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-server</artifactId>
+            <version>3.141.59</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -79,7 +69,9 @@
                 <executions>
                     <execution>
                         <id>custom rules</id>
-                        <goals><goal>enforce</goal></goals>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
                         <configuration>
                             <rules>
                                 <banDuplicatePomDependencyVersions></banDuplicatePomDependencyVersions>
